# luna-universalsearchmgr

./: CMakeLists.txt  README.md
Src/: Logging.cpp  Main.cpp  OpenSearchHandler.cpp  SearchItemsManager.cpp  SearchServiceManager.cpp  USUtils.cpp  UniversalSearchPrefsDb.cpp  UniversalSearchService.cpp
desktop-support/: UniversalSearchList.json  com.palm.universalsearch.json.pub  com.palm.universalsearch.service.prv  luna-universalsearchmgr.upstart
doc/: Doxyfile.in
files/: UniversalSearchList.json
files/launch/: LunaUniversalSearchMgr.conf.in  LunaUniversalSearchMgr.in  luna-universalsearchmgr.in
files/sysbus/: com.palm.universalsearch.json.pub.in  com.palm.universalsearch.service.prv.in
include/public/: Logging.h  OpenSearchHandler.h  SearchItemsManager.h  SearchServiceManager.h  USUtils.h  UniversalSearchPrefsDb.h  UniversalSearchService.h
